--- a/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
+++ b/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
@@ -3,7 +3,7 @@
 .div {
   display: flex;
   align-items: center;
-  margin: 1rem 0 0 calc(@youtubeCardMargin + @dashboardPagePaddingLeft);
+  margin: 1rem 0 0 calc(@cardMargin + @dashboardPagePaddingLeft);
   button {
     margin-left: 1.5rem;
   }
