--- a/src/spa/shared/cards/phantomCard/phantomCard.module.less
+++ b/src/spa/shared/cards/phantomCard/phantomCard.module.less
@@ -3,7 +3,7 @@
 
 .div {
   visibility: hidden;
-  margin: @youtubeCardMargin;
-  min-width: @youtubeCardWidth;
-  width: @youtubeCardWidth;
+  margin: @cardMargin;
+  min-width: @cardWidth;
+  width: @cardWidth;
 }
