--- a/src/spa/shared/cards/youtubeCard/youtubeCardThumbnail/youtubeCardThumbnail.module.less
+++ b/src/spa/shared/cards/youtubeCard/youtubeCardThumbnail/youtubeCardThumbnail.module.less
@@ -3,7 +3,7 @@
 
 .container {
   height: @youtubeCardThumbnailHeight;
-  width: @youtubeCardWidth;
+  width: @cardWidth;
   display: flex;
   position: relative;
   &:hover {
