--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -13,11 +13,14 @@
 
 // ----- cards ----- //
 
-// youtube card
-@youtubeCardHeight: 16rem;
-@youtubeCardMargin: 1rem;
+// general card sizes
+@cardHeight: 16rem;
+@cardInnerMargin: 0.75rem;
+@cardMargin: 1rem;
+@cardWidth: 15rem;
+
+// youtube card sizes
 @youtubeCardThumbnailHeight: 8.4375rem;
-@youtubeCardWidth: 15rem;
 
 // ----- forms ----- //
 
