--- a/src/spa/shared/cards/card.module.less
+++ b/src/spa/shared/cards/card.module.less
@@ -2,18 +2,33 @@
 @import "~styles/_sizes";
 @import "~styles/_shadows";
 
+.actionContainer {
+  margin: @cardInnerMargin;
+}
+
 .container {
   background: @white;
   box-shadow: @cardBoxShadow;
   border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
-  height: @youtubeCardHeight;
-  margin: @youtubeCardMargin;
-  min-width: @youtubeCardWidth;
+  //height: @cardHeight;  // todo: add back in
+  margin: @cardMargin;
+  min-width: @cardWidth;
   overflow: hidden;
   position: relative;
-  width: @youtubeCardWidth;
+  width: @cardWidth;
+}
+
+.hr {
+  border-color: @navBorder;
+  border-width: 0 0 0.0625rem 0;
+  width: 100%;
+}
+
+.isSelected {
+  border: 0.375rem solid @red; // todo, change color
+  box-sizing: border-box;
 }
 
 .overlayDiv {
@@ -22,10 +37,4 @@
   position: absolute;
   width: 100%;
   z-index: 1;
-}
-
-/* stylelint-disable */
-
-.isSelected {
-  border: 1px solid red;
 }
