--- a/src/spa/shared/cards/card.module.less
+++ b/src/spa/shared/cards/card.module.less
@@ -46,15 +46,6 @@
   margin: 2px;
 }
 
-.favoriteDiv {
-  background: red;
-  display: flex;
-  left: 1rem;
-  position: absolute;
-  top: 1rem;
-  z-index: 1;
-}
-
 .hr {
   border-color: @navBorder;
   border-width: 0 0 0.0625rem 0;
@@ -64,6 +55,15 @@
 .isSelected {
   border: 0.375rem solid @red; // todo, change color
   box-sizing: border-box;
+}
+
+.likeButtonDiv {
+  background: red;
+  display: flex;
+  left: 1rem;
+  position: absolute;
+  top: 1rem;
+  z-index: 1;
 }
 
 .overlayDiv {
