--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -7,11 +7,13 @@
 @lightGrey: #A4AAAF;
 @grey: #d7d8d4;
 @navBorder: #E6E8E9;
+@white: #FFF;
+
+// Transparent Greyscale
 @transparentBlack: #565e5fa6;
 @transparentBlackDarker: #565e5fd9;
 @transparentBlackLighter: #798486a6;
 @transparentWhite: #ffffffb8;
-@white: #FFF;
 
 // Colors
 @blue: #00A6ED;
@@ -34,6 +36,7 @@
   lightGrey: @lightGrey;
   orange: @orange;
   red: @red;
+  transparentBlack: @transparentBlack;
   transparentWhite: @transparentWhite;
   white: @white;
 }
