creatign card menu button

--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -1,9 +1,9 @@
-// ----- ant ----- //
+// ----- ANT ----- //
 
 // ant form sizes
 @formItemMarginBottom: 0.75rem;
 
-// ----- navigation ----- //
+// ----- NAVIGATION ----- //
 
 @headerHeight: 5rem;
 @navWidth: 5rem;
@@ -11,7 +11,7 @@
 @navigationButtonHeight: 4rem;
 @navigationButtonMargin: 0.5rem;
 
-// ----- cards ----- //
+// ----- CARDS ----- //
 
 // general card sizes
 @cardHeight: 16rem;
@@ -22,14 +22,18 @@
 // youtube card sizes
 @youtubeCardThumbnailHeight: 8.4375rem;
 
-// ----- forms ----- //
+// ----- FORMS ----- //
 
 // login form
 @formHorizontalPadding: 1.5rem;
 
-// ----- pages ----- //
+// ----- PAGES ----- //
 
 @dashboardPagePaddingLeft: 1rem;
+
+// ----- OTHER ----- //
+
+@standardBorderRadius: 0.5rem;
 
 /* stylelint-disable */
 :export {
