--- a/src/spa/shared/cards/card/card.module.less
+++ b/src/spa/shared/cards/card/card.module.less
@@ -6,10 +6,17 @@
   margin: @cardInnerMargin;
 }
 
+.cardMenuButtonDiv {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  z-index: 1;
+}
+
 .container {
   background: @white;
   box-shadow: @cardBoxShadow;
-  border-radius: 0.5rem;
+  border-radius: @standardBorderRadius;
   display: flex;
   flex-direction: column;
   //height: @cardHeight;  // todo: add back in
@@ -18,32 +25,6 @@
   overflow: hidden;
   position: relative;
   width: @cardWidth;
-}
-
-.editDiv {
-  // todo: add shadow
-  align-items: center;
-  background: @white;
-  box-shadow: @cardBoxShadow;
-  border-radius: 0.5rem; // todo: make into variable with container radius?
-  display: flex;
-  height: 2.25rem;
-  justify-content: center;
-  position: absolute;
-  right: 1rem;
-  top: 1rem;
-  width: 2.25rem;
-  z-index: 1;
-}
-
-/* stylelint-disable */
-
-.editDot {
-  background: @black;
-  border-radius: 50%;
-  height: 4px;
-  width: 4px;
-  margin: 2px;
 }
 
 .hr {
