--- a/src/spa/shared/alert/alert.module.less
+++ b/src/spa/shared/alert/alert.module.less
@@ -3,7 +3,7 @@
 
 .alert {
   align-items: center;
-  background-color: @yellowHalf;
+  background-color: @yellowHalfOpacity;
   display: flex;
   padding: 0.5rem 0.9375rem;
 
