--- a/src/spa/shared/buttons/playButton/playButton.module.less
+++ b/src/spa/shared/buttons/playButton/playButton.module.less
@@ -2,7 +2,7 @@
 
 .arrow {
   border-bottom: 1rem solid transparent;
-  border-left: 1rem solid @transparentWhite;
+  border-left: 1rem solid @transparentWhiteThreeQuarterOpacity;
   border-radius: 0.125rem;
   border-top: 1rem solid transparent;
   height: 0;
@@ -29,9 +29,6 @@
   width: 3.5rem;
   &:hover {
     background: @transparentBlackDarker;
-  }
-  &:active {
-    background: @transparentBlackLighter;
   }
 }
 
