--- a/src/spa/shared/cards/card/card.module.less
+++ b/src/spa/shared/cards/card/card.module.less
@@ -6,25 +6,28 @@
   margin: @cardInnerMargin;
 }
 
-.cardMenuButtonDiv {
-  position: absolute;
-  right: 1rem;
-  top: 1rem;
-  z-index: 1;
-}
-
 .container {
   background: @white;
-  box-shadow: @cardBoxShadow;
   border-radius: @standardBorderRadius;
+  box-shadow: @cardBoxShadow;
   display: flex;
   flex-direction: column;
-  //height: @cardHeight;  // todo: add back in
+  height: @cardHeight;
   margin: @cardMargin;
   min-width: @cardWidth;
   overflow: hidden;
   position: relative;
   width: @cardWidth;
+}
+
+.contentButtons {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem;
+  position: absolute;
+  width: calc(100% - 2rem);
+  z-index: 1;
 }
 
 .hr {
@@ -33,23 +36,15 @@
   width: 100%;
 }
 
-.isSelected {
-  border: 0.375rem solid @red; // todo, change color
-  box-sizing: border-box;
-}
-
-.likeButtonDiv {
-  display: flex;
-  left: 1rem;
-  position: absolute;
-  top: 1rem;
-  z-index: 1;
-}
-
 .overlayDiv {
   cursor: pointer;
   height: 100%;
+  outline: none;
   position: absolute;
   width: 100%;
   z-index: 1;
+}
+
+.selectedContainer {
+  box-shadow: @cardBoxShadowSelected;
 }
