--- a/src/styles/_shadows.less
+++ b/src/styles/_shadows.less
@@ -1,4 +1,14 @@
+@import "~styles/_colors";
+
 @cardBoxShadow: 0 1px 2px rgba(0,0,0,0.07),
+  0 2px 4px rgba(0,0,0,0.07),
+  0 4px 8px rgba(0,0,0,0.07),
+  0 8px 16px rgba(0,0,0,0.07),
+  0 16px 32px rgba(0,0,0,0.07),
+  0 32px 64px rgba(0,0,0,0.07);
+
+@cardBoxShadowSelected: 0 0 0 3px @blueThreeQuarterOpacity,
+  0 1px 2px rgba(0,0,0,0.07),
   0 2px 4px rgba(0,0,0,0.07),
   0 4px 8px rgba(0,0,0,0.07),
   0 8px 16px rgba(0,0,0,0.07),
