creating separate components

--- a/src/spa/shared/cards/card/card.module.less
+++ b/src/spa/shared/cards/card/card.module.less
@@ -2,10 +2,6 @@
 @import "~styles/_sizes";
 @import "~styles/_shadows";
 
-.actionContainer {
-  margin: @cardInnerMargin;
-}
-
 .container {
   background: @white;
   border-radius: @standardBorderRadius;
@@ -28,6 +24,10 @@
   position: absolute;
   width: calc(100% - 2rem);
   z-index: 1;
+}
+
+.footerContainer {
+  margin: @cardInnerMargin;
 }
 
 .hr {
