--- a/src/spa/shared/cards/youtubeCard/youtubeCardThumbnail/youtubeCardThumbnail.module.less
+++ b/src/spa/shared/cards/youtubeCard/youtubeCardThumbnail/youtubeCardThumbnail.module.less
@@ -1,4 +1,5 @@
 @import "~styles/_colors";
+@import "~styles/_transitions";
 
 .durationDiv {
   background: @transparentBlack;
@@ -18,7 +19,7 @@
 .playButtonDiv {
   left: 50%;
   opacity: 0;
-  transition: opacity 0.4s ease;
+  transition: @cardContentOpacityTransition;
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
