--- a/src/spa/shared/cards/card/cardContent/cardContent.module.less
+++ b/src/spa/shared/cards/card/cardContent/cardContent.module.less
@@ -1,9 +1,28 @@
+@import "~styles/_sizes";
+@import "~styles/_transitions";
+
 .buttonsContainer {
   align-items: center;
   display: flex;
   justify-content: space-between;
   margin: 1rem;
+  opacity: 0;
   position: absolute;
+  transition: @cardContentOpacityTransition;
   width: calc(100% - 2rem);
   z-index: 1;
+}
+
+.container {
+  height: @cardContentHeight;
+  width: @cardWidth;
+  display: flex;
+  position: relative;
+  &:hover {
+    :global {
+      #card-content-buttons-container, #card-youtube-play-button {
+        opacity: 1;
+      }
+    }
+  }
 }
