--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -14,13 +14,10 @@
 // ----- CARDS ----- //
 
 // general card sizes
-@cardHeight: 16rem;
+@cardContentHeight: 8.4375rem;
 @cardInnerMargin: 0.75rem;
 @cardMargin: 1rem;
 @cardWidth: 15rem;
-
-// youtube card sizes
-@youtubeCardThumbnailHeight: 8.4375rem;
 
 // ----- FORMS ----- //
 
