--- a/src/spa/shared/buttons/cardMenuButton/cardMenuButton.module.less
+++ b/src/spa/shared/buttons/cardMenuButton/cardMenuButton.module.less
@@ -29,8 +29,10 @@
   width: 0.25rem;
 }
 
-.ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.popover {
+  :global {
+    .ant-popover-inner-content {
+      padding: 0.25rem 0.875rem 0.25rem 0.625rem;
+    }
+  }
 }
