--- a/src/spa/shared/buttons/cardMenuButton/cardMenuButtonContent.module.less
+++ b/src/spa/shared/buttons/cardMenuButton/cardMenuButtonContent.module.less
@@ -1,15 +1,18 @@
+.checkboxDiv {
+  margin-right: 0.625rem;
+}
+
+.iconDiv {
+  display: flex;
+  > svg {
+    margin-right: 0.5rem;
+  }
+}
+
 .li {
   align-items: center;
   display: flex;
   margin: 0.375rem 0;
-}
-
-.toDoDiv {
-  margin-left: 0.625rem;
-}
-
-.typographyDiv {
-  margin-left: 0.5rem;
 }
 
 .ul {
