--- a/src/spa/shared/buttons/cardMenuButton/cardMenuButtonContent.module.less
+++ b/src/spa/shared/buttons/cardMenuButton/cardMenuButtonContent.module.less
@@ -1,7 +1,3 @@
-.checkboxDiv {
-  margin-right: 0.625rem;
-}
-
 .iconDiv {
   display: flex;
   > svg {
@@ -13,6 +9,13 @@
   align-items: center;
   display: flex;
   margin: 0.375rem 0;
+}
+
+.toDoDiv {
+  display: flex;
+  > button {
+    margin-left: 0.625rem;
+  }
 }
 
 .ul {
