Dot menu enhancement (#34)
* updating content

* updating content

* updating typography

* updating menu content

* updating checkbox

* working on sample checkbox

* updating sample checkbox

* updating card menu button content

* updating pm

--- a/src/spa/shared/buttons/cardMenuButton/cardMenuButton.module.less
+++ b/src/spa/shared/buttons/cardMenuButton/cardMenuButton.module.less
@@ -28,3 +28,11 @@
   margin: 0.125rem;
   width: 0.25rem;
 }
+
+.popover {
+  :global {
+    .ant-popover-inner-content {
+      padding: 0.25rem 0.875rem 0.25rem 0.625rem;
+    }
+  }
+}
