--- a/src/spa/shared/cards/card/cardContent/cardContent.module.less
+++ b/src/spa/shared/cards/card/cardContent/cardContent.module.less
@@ -7,12 +7,12 @@
   justify-content: space-between;
   margin: 1rem;
   position: absolute;
-  transition: @cardContentOpacityTransition;
   width: calc(100% - 2rem);
   z-index: 1;
   :global {
-    .like-button {
+    .card-menu-button, .like-button {
       opacity: 0;
+      transition: @cardContentOpacityTransition;
     }
   }
 }
@@ -24,7 +24,7 @@
   position: relative;
   &:hover {
     :global {
-      .card-youtube-play-button, .like-button {
+      .card-menu-button, .card-youtube-play-button, .like-button {
         opacity: 1;
       }
     }
