--- a/src/spa/shared/buttons/cardMenuButton/cardMenuButton.module.less
+++ b/src/spa/shared/buttons/cardMenuButton/cardMenuButton.module.less
@@ -29,10 +29,18 @@
   width: 0.25rem;
 }
 
+.overlay {
+  background: #E41245;
+  height: 12rem;
+  left: 6rem;
+  position: absolute;
+  top: -1rem;
+  width: 8rem;
+  z-index: -1;
+}
+
 .popover {
-  :global {
-    .ant-popover-inner-content {
-      padding: 0.25rem 0.875rem 0.25rem 0.625rem;
-    }
-  }
+  background: #F17D00;
+  height: 3rem;
+  width: 3rem;
 }
