--- a/src/spa/shared/modals/popover/popover.module.less
+++ b/src/spa/shared/modals/popover/popover.module.less
@@ -1,5 +1,15 @@
+@import "~styles/_colors";
+@import "~styles/_shadows";
+@import "~styles/_sizes";
+
 .div {
-  background: #F17D00;
-  height: 3rem;
-  width: 3rem;
+  background: @white;
+  border-radius: @standardBorderRadius;
+  box-shadow: @cardBoxShadow;
+  bottom: -3.75rem;
+  display: flex;
+  //height: 100%;
+  position: absolute;
+  right: 0;
+  //width: 100%;
 }
