--- a/src/spa/shared/buttons/cardMenuButton/cardMenuButton.module.less
+++ b/src/spa/shared/buttons/cardMenuButton/cardMenuButton.module.less
@@ -32,10 +32,10 @@
 .overlay {
   background: transparent;
   cursor: pointer;
-  height: 12rem;
-  left: 6rem;
+  height: @cardContentHeight;
+  left: -1rem;
   position: absolute;
   top: -1rem;
-  width: 8rem;
+  width: @cardWidth;
   z-index: -1;
 }
