updating popover transition

--- a/src/spa/shared/modals/popover/popover.module.less
+++ b/src/spa/shared/modals/popover/popover.module.less
@@ -7,5 +7,6 @@
   border-radius: @standardBorderRadius;
   box-shadow: @cardBoxShadow;
   display: flex;
+  overflow: hidden;
   position: absolute;
 }
