Card men visibile (#38)
* updating popover and class names

* updating card menu button visibility

* updating menu

* creating popover

* updating popover

* updating popover

* updating card menu button

* updating menu button

* updating card menu button

* Card men visibile transition (#36)

* updating popover

* updating popover transition

* updating popover

* updating

* updating popover

* updating

* updating prtodo

* updating

* deleting popover module

--- a/src/spa/shared/buttons/cardMenuButton/cardMenuButton.module.less
+++ b/src/spa/shared/buttons/cardMenuButton/cardMenuButton.module.less
@@ -29,10 +29,13 @@
   width: 0.25rem;
 }
 
-.popover {
-  :global {
-    .ant-popover-inner-content {
-      padding: 0.25rem 0.875rem 0.25rem 0.625rem;
-    }
-  }
+.overlay {
+  background: transparent;
+  cursor: pointer;
+  height: @cardContentHeight;
+  left: -1rem;
+  position: absolute;
+  top: -1rem;
+  width: @cardWidth;
+  z-index: -1;
 }
