--- a/src/spa/shared/cards/card/cardContent/cardContent.module.less
+++ b/src/spa/shared/cards/card/cardContent/cardContent.module.less
@@ -6,11 +6,15 @@
   display: flex;
   justify-content: space-between;
   margin: 1rem;
-  opacity: 0;
   position: absolute;
-  transition: @cardContentOpacityTransition;
   width: calc(100% - 2rem);
   z-index: 1;
+  :global {
+    .card-menu-button, .like-button {
+      opacity: 0;
+      transition: @cardContentOpacityTransition;
+    }
+  }
 }
 
 .container {
@@ -20,7 +24,7 @@
   position: relative;
   &:hover {
     :global {
-      #card-content-buttons-container, #card-youtube-play-button {
+      .card-menu-button, .card-youtube-play-button, .like-button {
         opacity: 1;
       }
     }
