--- a/src/spa/shared/tags/tag.module.less
+++ b/src/spa/shared/tags/tag.module.less
@@ -3,10 +3,13 @@
 .div {
   align-items: center;
   background: @blue;
-  border-radius: 0.625rem;
+  border-radius: 0.75rem;
   display: inline-flex;
   height: 1.5rem;
+  > button {
+    margin-right: 0.375rem;
+  }
   > p {
-    margin: 0 0.5rem;
+    margin: 0 0.25rem 0 0.5rem;
   }
 }
