--- a/src/spa/shared/cards/card/cardFooter/cardFooter.module.less
+++ b/src/spa/shared/cards/card/cardFooter/cardFooter.module.less
@@ -1,7 +1,7 @@
 @import "~styles/_colors";
 @import "~styles/_sizes";
 
-.container {
+.footerContainer {
   margin: @cardInnerMargin;
 }
 
@@ -11,3 +11,7 @@
   width: 100%;
 }
 
+.tagContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
