--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -43,11 +43,14 @@
 :export {
   black: @black;
   blue: @blue;
+  green: @green;
   lightGrey: @lightGrey;
   orange: @orange;
+  purple: @purple;
   red: @red;
   transparentBlack: @transparentBlack;
   transparentWhite: @transparentWhiteThreeQuarterOpacity;
   white: @white;
+  yellow: @yellow;
 }
 /* stylelint-enable */
