--- a/src/spa/shared/tags/tag.module.less
+++ b/src/spa/shared/tags/tag.module.less
@@ -2,10 +2,10 @@
 
 .div {
   align-items: center;
-  background: @blue;
   border-radius: 0.75rem;
   display: inline-flex;
   height: 1.5rem;
+  margin: 0.1875rem;
   > button {
     margin-right: 0.375rem;
   }
