--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -15,6 +15,7 @@
 @transparentBlack: #565E5fA6; // 65% opacity
 @transparentBlackDarker: #565E5fD9; // 85% opacity
 @transparentBlackQuarterOpacity: #565E5F40;
+@transparentWhiteHalfOpacity: #FFFFFF80;
 @transparentWhiteThreeQuarterOpacity: #FFFFFFBF;
 
 // ----- COLORS ----- //
@@ -42,11 +43,14 @@
 :export {
   black: @black;
   blue: @blue;
+  green: @green;
   lightGrey: @lightGrey;
   orange: @orange;
+  purple: @purple;
   red: @red;
   transparentBlack: @transparentBlack;
   transparentWhite: @transparentWhiteThreeQuarterOpacity;
   white: @white;
+  yellow: @yellow;
 }
 /* stylelint-enable */
