--- a/src/spa/shared/cards/card/card.module.less
+++ b/src/spa/shared/cards/card/card.module.less
@@ -12,9 +12,11 @@
   min-width: @cardWidth;
   overflow: hidden;
   position: relative;
+  transition: box-shadow 0.1s ease;
   width: @cardWidth;
 }
 
 .selectedContainer {
   box-shadow: @cardBoxShadowSelected;
+  transition: box-shadow 0.1s ease;
 }
