--- a/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
+++ b/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
@@ -1,7 +1,7 @@
 .ul {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0.75rem;
   li:not(:last-of-type) {
     margin-bottom: 0.625rem;
   }
