--- a/src/spa/app/layout/header/headerTools/headerNotifications/headerNotifications.module.less
+++ b/src/spa/app/layout/header/headerTools/headerNotifications/headerNotifications.module.less
@@ -1,27 +1,10 @@
 @import "~styles/_sizes";
 
 .contentDiv {
-  :global {
-    .ant-empty {
-      margin: 1rem 0;
-    }
-  }
-  p {
-    text-align: center;
-  }
-}
-
-.iconDiv {
-  cursor: pointer;
   margin: 1rem;
-}
-
-.popover {
-  top: @headerHeight !important;
-  width: 12rem;
-  :global {
-    .ant-popover-title {
-      min-width: auto;
-    }
+  width: 9rem;
+  p {
+    margin-top: 1rem;
+    text-align: center;
   }
 }
