--- a/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
+++ b/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
@@ -1,35 +1,7 @@
-@import "~styles/_colors";
-@import "~styles/_sizes";
-
-.arrowDiv {
-  > svg {
-    margin-left: 0.5rem;
-    * {
-      fill: @lightGrey;
-    }
-  }
-}
-
-.div {
-  align-items: center;
-  cursor: pointer;
-  display: flex;
-  margin-left: 1rem;
-}
-
-.popover {
-  top: @headerHeight !important;
-  :global {
-    .ant-popover-content {
-      width: 13rem;
-    }
-  }
-}
-
 .ul {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0.75rem;
   li:not(:last-of-type) {
     margin-bottom: 0.625rem;
   }
