--- a/src/styles/_shadows.less
+++ b/src/styles/_shadows.less
@@ -15,6 +15,8 @@
   0 16px 32px rgba(0,0,0,0.07),
   0 32px 64px rgba(0,0,0,0.07);
 
+@emptyCardBoxShadow: 0px 7px 32px -10px rgba(0,0,0,0.28);
+
 @landingFormBoxShadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
   0 6.7px 5.3px rgba(0, 0, 0, 0.048),
   0 12.5px 10px rgba(0, 0, 0, 0.06),
