updating card height

--- a/src/spa/shared/cards/card/card.module.less
+++ b/src/spa/shared/cards/card/card.module.less
@@ -8,6 +8,7 @@
   box-shadow: @cardBoxShadow;
   display: flex;
   flex-direction: column;
+  height: @cardTotalHeight;
   margin: @cardMargin;
   min-width: @cardWidth;
   overflow: hidden;
