--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -15,8 +15,10 @@
 
 // general card sizes
 @cardContentHeight: 8.4375rem;
+@cardDescriptionHeight: 6.5rem;
 @cardInnerMargin: 0.75rem;
 @cardMargin: 1rem;
+@cardTotalHeight: calc(@cardContentHeight + @cardDescriptionHeight + @cardMargin * 2);
 @cardWidth: 15rem;
 
 // ----- FORMS ----- //
