updating dashboard header styling

--- a/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
+++ b/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
@@ -1,8 +1,11 @@
 @import "~styles/_sizes";
 
-.div {
+.buttonsContainer {
+  margin-top: 0.25rem;
+}
+
+.formContainer {
   display: flex;
-  align-items: center;
   margin: 1rem 0 0 calc(@cardMargin + @dashboardPagePaddingLeft);
   button {
     margin-left: 1.5rem;
