updating pop confirm

--- a/src/spa/shared/modals/popConfirm/popConfirm.module.less
+++ b/src/spa/shared/modals/popConfirm/popConfirm.module.less
@@ -1,5 +1,9 @@
-.container {
-  width: 5rem;
-  height: 5rem;
-  background: #E41245;
+.contentButtons {
+  display: flex;
+  margin-top: 0.25rem;
+}
+
+.contentContainer {
+  margin: 1rem;
+  width: 10rem;
 }
