--- a/src/spa/shared/modals/popConfirm/popConfirm.module.less
+++ b/src/spa/shared/modals/popConfirm/popConfirm.module.less
@@ -1,9 +1,10 @@
 .contentButtons {
   display: flex;
+  justify-content: space-evenly;
   margin-top: 0.25rem;
 }
 
 .contentContainer {
-  margin: 1rem;
-  width: 10rem;
+  margin: 0.5rem;
+  width: 6.25rem;
 }
