--- a/src/spa/shared/buttons/cardMenuButton/cardMenuButtonContent/cardMenuButtonContent.module.less
+++ b/src/spa/shared/buttons/cardMenuButton/cardMenuButtonContent/cardMenuButtonContent.module.less
@@ -1,7 +1,12 @@
+/* stylelint-disable */
+
 .iconDiv {
   display: flex;
+  justify-content: center;
+  margin-right: 8px;
+  width: 28px;
   > svg {
-    margin-right: 0.5rem;
+    margin-right: 0;
   }
 }
 
@@ -14,12 +19,12 @@
 .toDoDiv {
   display: flex;
   > button {
-    margin-left: 0.625rem;
+    margin-right: 0.5rem;
   }
 }
 
 .ul {
   list-style: none;
   margin: 0;
-  padding: 0.25rem 0.875rem 0.25rem 0.625rem;
+  padding: 0 0.5rem;
 }
