--- a/src/spa/shared/buttons/cardMenuButton/cardMenuButtonContent/cardMenuButtonContent.module.less
+++ b/src/spa/shared/buttons/cardMenuButton/cardMenuButtonContent/cardMenuButtonContent.module.less
@@ -1,10 +1,10 @@
-/* stylelint-disable */
+@import "~styles/_colors";
 
 .iconDiv {
   display: flex;
   justify-content: center;
-  margin-right: 8px;
-  width: 28px;
+  margin-right: 0.5rem;
+  width: 1.75rem;
   > svg {
     margin-right: 0;
   }
@@ -14,6 +14,11 @@
   align-items: center;
   display: flex;
   margin: 0.375rem 0;
+  &:hover {
+    > div > div > button {
+      color: @blueHover;
+    }
+  }
 }
 
 .toDoDiv {
