--- a/src/spa/shared/buttons/cardMenuButton/cardMenuButtonContent/cardMenuButtonContent.module.less
+++ b/src/spa/shared/buttons/cardMenuButton/cardMenuButtonContent/cardMenuButtonContent.module.less
@@ -1,7 +1,12 @@
+@import "~styles/_colors";
+
 .iconDiv {
   display: flex;
+  justify-content: center;
+  margin-right: 0.5rem;
+  width: 1.75rem;
   > svg {
-    margin-right: 0.5rem;
+    margin-right: 0;
   }
 }
 
@@ -9,17 +14,22 @@
   align-items: center;
   display: flex;
   margin: 0.375rem 0;
+  &:hover {
+    > div > div > button {
+      color: @blueHover;
+    }
+  }
 }
 
 .toDoDiv {
   display: flex;
   > button {
-    margin-left: 0.625rem;
+    margin-right: 0.5rem;
   }
 }
 
 .ul {
   list-style: none;
   margin: 0;
-  padding: 0.25rem 0.875rem 0.25rem 0.625rem;
+  padding: 0 0.5rem;
 }
