--- a/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
+++ b/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
@@ -8,7 +8,7 @@
 .formContainer {
   display: flex;
   margin: 1rem 0 0 calc(@cardMargin + @dashboardPagePaddingLeft);
-  button {
+  button { // NOTE TODO: This is applying css to the toggle filters
     margin-left: 1.5rem;
   }
 }
