--- a/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
+++ b/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
@@ -1,5 +1,9 @@
 @import "~styles/_sizes";
 
+.buttonDiv {
+  margin: 0 1.5rem;
+}
+
 .buttonsContainer {
   margin-top: 0.25rem;
   position: relative;
@@ -8,9 +12,6 @@
 .formContainer {
   display: flex;
   margin: 1rem 0 0 calc(@cardMargin + @dashboardPagePaddingLeft);
-  button { // NOTE TODO: This is applying css to the toggle filters
-    margin-left: 1.5rem;
-  }
 }
 
 .input {
