--- a/src/spa/shared/inputs/toggle/toggle.module.less
+++ b/src/spa/shared/inputs/toggle/toggle.module.less
@@ -7,12 +7,21 @@
   display: flex;
   outline: none;
   padding: 0;
-  > button {
-    margin-right: 0.5rem;
-  }
   &:hover {
     > div > p {
       color: @blueHover;
     }
+  }
+}
+
+.large {
+  > button {
+    margin-right: 1rem;
+  }
+}
+
+.small {
+  > button {
+    margin-right: 0.5rem;
   }
 }
