--- a/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
+++ b/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
@@ -1,15 +1,17 @@
 @import "~styles/_sizes";
 
+.buttonDiv {
+  margin: 0 1.5rem;
+}
+
 .buttonsContainer {
   margin-top: 0.25rem;
+  position: relative;
 }
 
 .formContainer {
   display: flex;
   margin: 1rem 0 0 calc(@cardMargin + @dashboardPagePaddingLeft);
-  button {
-    margin-left: 1.5rem;
-  }
 }
 
 .input {
