updating phantom card display

--- a/src/spa/shared/cards/phantomCard/phantomCard.module.less
+++ b/src/spa/shared/cards/phantomCard/phantomCard.module.less
@@ -2,7 +2,7 @@
 @import "~styles/_sizes";
 
 .div {
-  visibility: hidden;
+  display: none;
   margin: @cardMargin;
   min-width: @cardWidth;
   width: @cardWidth;
