--- a/src/spa/shared/typography/typographyText/typographyText.module.less
+++ b/src/spa/shared/typography/typographyText/typographyText.module.less
@@ -10,7 +10,8 @@
 
 .ellipsis {
   cursor: pointer;
-  display: flex;
+  display: inline-flex;
+  margin: 0;
   &:hover {
     > div {
       background: @blueHover;
