--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -3,14 +3,6 @@
 // ant form sizes
 @formItemMarginBottom: 0.75rem;
 
-// ----- NAVIGATION ----- //
-
-@headerHeight: 5rem;
-@navWidth: 5rem;
-@navWidthExpanded: 15rem;
-@navigationButtonHeight: 4rem;
-@navigationButtonMargin: 0.5rem;
-
 // ----- CARDS ----- //
 
 // general card sizes
@@ -26,13 +18,23 @@
 // login form
 @formHorizontalPadding: 1.5rem;
 
-// ----- PAGES ----- //
+// ----- NAVIGATION ----- //
 
-@dashboardPagePaddingLeft: 1rem;
+@headerHeight: 5rem;
+@navWidth: 5rem;
+@navWidthExpanded: 15rem;
+@navigationButtonHeight: 4rem;
+@navigationButtonMargin: 0.5rem;
 
 // ----- OTHER ----- //
 
 @standardBorderRadius: 0.5rem;
+
+// ----- PAGES ----- //
+
+@dashboardPagePaddingLeft: 1rem;
+
+// ----- SIZE EXPORTS ----- //
 
 /* stylelint-disable */
 :export {
