--- a/src/spa/shared/typography/typography.module.less
+++ b/src/spa/shared/typography/typography.module.less
@@ -1,5 +1,6 @@
 @import "~styles/_colors";
 @import "~styles/_fonts";
+@import "~styles/_sizes";
 
 // ----- OVERALL STYLING ----- //
 
@@ -50,27 +51,27 @@
 // ----- SIZES ----- //
 
 .one {
-  font-size: 0.625rem;
+  font-size: @typographyOne;
 }
 
 .two {
-  font-size: 0.75rem;
+  font-size: @typographyTwo;
 }
 
 .three {
-  font-size: 1rem;
+  font-size: @typographyThree;
 }
 
 .four {
-  font-size: 1.25rem;
+  font-size: @typographyFour;
 }
 
 .five {
-  font-size: 2.25rem;
+  font-size: @typographyFive;
 }
 
 .normal {
-  font-size: 0.875rem;
+  font-size: @typographyNormal;
 }
 
 // ----- WEIGHTS ----- //
