--- a/src/spa/shared/modals/popOver/popOver.module.less
+++ b/src/spa/shared/modals/popOver/popOver.module.less
@@ -1,5 +1,9 @@
 @import "~styles/_colors";
 
+.container {
+  position: relative;
+}
+
 // ----- CARET STYLES ----- //
 
 // Source: https://css-tricks.com/snippets/css/css-triangle/
