--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -18,6 +18,10 @@
 // login form
 @formHorizontalPadding: 1.5rem;
 
+// ----- MODALS ----- //
+
+@caretSize: 0.625rem;
+
 // ----- NAVIGATION ----- //
 
 @headerHeight: 5rem;
@@ -38,6 +42,7 @@
 
 /* stylelint-disable */
 :export {
+  caretSize: @caretSize;
   headerHeight: @headerHeight;
   navWidth: @navWidth;
 }
