--- a/src/spa/app/layout/header/headerTools/headerTools.module.less
+++ b/src/spa/app/layout/header/headerTools/headerTools.module.less
@@ -27,16 +27,18 @@
 
 .notificationsIconDiv {
   align-items: center;
+  cursor: pointer;
   display: flex;
   height: @headerHeight;
-  margin: 0 1rem;
+  margin: 0 1.375rem;
 }
 
 .profileIconDiv {
   align-items: center;
+  cursor: pointer;
   display: flex;
   height: @headerHeight;
-  margin: 0 0.5rem 0 1.5rem;
+  margin: 0 1.5rem;
 }
 
 .section {
