--- a/src/spa/app/layout/header/headerTools/headerNotifications/headerNotifications.module.less
+++ b/src/spa/app/layout/header/headerTools/headerNotifications/headerNotifications.module.less
@@ -9,7 +9,10 @@
   }
 }
 
-.iconDiv {
+.div {
+  align-items: center;
   cursor: pointer;
-  margin: 1rem;
+  display: flex;
+  height: @headerHeight;
+  margin: 0 1.375rem;
 }
