--- a/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
+++ b/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
@@ -1,3 +1,23 @@
+@import "~styles/_colors";
+@import "~styles/_sizes";
+
+.arrowDiv {
+  margin-left: 0.5rem;
+  > svg {
+    * {
+      fill: @lightGrey;
+    }
+  }
+}
+
+.div {
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  height: @headerHeight;
+  margin: 0 1.5rem;
+}
+
 .ul {
   list-style: none;
   margin: 0;
