--- a/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
+++ b/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
@@ -22,6 +22,7 @@
   list-style: none;
   margin: 0;
   padding: 0.75rem;
+  width: 8.375rem;
   li:not(:last-of-type) {
     margin-bottom: 0.625rem;
   }
