Popover relative debug (#71)
* updating

* updating

* updating

* updating

* udpating

* updating

* updating

* updating

* updating prtodo

--- a/src/spa/app/layout/header/headerTools/headerNotifications/headerNotifications.module.less
+++ b/src/spa/app/layout/header/headerTools/headerNotifications/headerNotifications.module.less
@@ -8,3 +8,11 @@
     text-align: center;
   }
 }
+
+.div {
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  height: @headerHeight;
+  margin: 0 1.375rem;
+}
