--- a/src/spa/app/layout/header/headerTools/headerTools.module.less
+++ b/src/spa/app/layout/header/headerTools/headerTools.module.less
@@ -1,21 +1,20 @@
-@import "~styles/_colors";
 @import "~styles/_sizes";
 
-.div {
-  width: 1rem;
-}
-
 .hr {
-  border-color: @navBorder;
   border-width: 0 0.0625rem 0 0;
   height: 60%;
 }
 
-.section {
+.hrDiv {
   align-items: center;
   display: flex;
   height: @headerHeight;
-  > svg {
-    margin: 1rem;
-  }
+}
+
+.hrParentDiv {
+  overflow: hidden;
+}
+
+.section {
+  display: flex;
 }
