--- a/src/spa/shared/modals/popOverTwo/popOverTwo.module.less
+++ b/src/spa/shared/modals/popOverTwo/popOverTwo.module.less
@@ -14,16 +14,26 @@
   width: 70rem;
 }
 
+.content {
+  margin: 2rem;
+}
+
 .div {
   align-items: center;
   display: flex;
   justify-content: space-between;
 }
 
-.modal {
-  position: absolute;
+.popOver {
   background: orange;
   border-radius: 4px;
-  height: 5rem;
-  width: 5rem;
+  position: absolute;
+}
+
+.select {
+  :global {
+    .ant-select {
+      width: 20rem;
+    }
+  }
 }
