--- a/src/spa/shared/modals/popOverTwo/popOverTwo.module.less
+++ b/src/spa/shared/modals/popOverTwo/popOverTwo.module.less
@@ -1,13 +1,14 @@
 /* stylelint-disable */
 
 .box {
-  background: pink;
+  background: blue;
   height: 20rem;
   margin: 5rem;
   width: 20rem;
 }
 
 .container {
+  background: pink;
   border: 0.2rem solid #E41245;
   height: 40rem;
   margin: 5rem;
