--- a/src/spa/app/layout/header/headerTools/headerTools.module.less
+++ b/src/spa/app/layout/header/headerTools/headerTools.module.less
@@ -1,20 +1,14 @@
+@import "~styles/_colors";
 @import "~styles/_sizes";
 
 .hr {
+  border-color: @navBorder;
   border-width: 0 0.0625rem 0 0;
   height: 60%;
 }
 
-.hrDiv {
+.section {
   align-items: center;
   display: flex;
   height: @headerHeight;
-}
-
-.hrParentDiv {
-  overflow: hidden;
-}
-
-.section {
-  display: flex;
 }
