--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -47,3 +47,12 @@
   navWidth: @navWidth;
 }
 /* stylelint-enable */
+
+// ----- TYPOGRAPHY ----- //
+
+@typographyOne: 0.625rem;
+@typographyTwo: 0.75rem;
+@typographyThree: 1.0rem;
+@typographyFour: 1.25rem;
+@typographyFive: 2.25rem;
+@typographyNormal: 0.875rem;
