--- a/src/spa/app/layout/header/headerTools/headerNotifications/headerNotifications.module.less
+++ b/src/spa/app/layout/header/headerTools/headerNotifications/headerNotifications.module.less
@@ -1,3 +1,4 @@
+@import "~styles/_colors";
 @import "~styles/_sizes";
 
 .contentDiv {
@@ -9,10 +10,22 @@
   }
 }
 
-.div {
+.hr {
+  border-color: @navBorder;
+  border-width: 0 0.0625rem 0 0;
+  height: 60%;
+}
+
+.iconDiv {
   align-items: center;
   cursor: pointer;
   display: flex;
   height: @headerHeight;
   margin: 0 1.375rem;
+}
+
+.parentDiv {
+  align-items: center;
+  display: flex;
+  height: @headerHeight;
 }
