--- a/src/spa/shared/forms/form/form.module.less
+++ b/src/spa/shared/forms/form/form.module.less
@@ -1,6 +1,6 @@
 @import '~styles/_sizes';
 
 .login {
-  padding: 1.25rem @formHorizontalPadding;
+  padding: 1.25rem @formHorizontalPadding !important;
   width: 20rem;
 }
