--- a/src/spa/app/layout/navigation/navigationButtons/navigationButtons.module.less
+++ b/src/spa/app/layout/navigation/navigationButtons/navigationButtons.module.less
@@ -1,3 +1,12 @@
+@import "~styles/_sizes";
+
+.parentSection {
+  align-items: center;
+  display: flex;
+  height: calc(100% - @headerHeight);
+  justify-content: center;
+}
+
 .section {
   align-items: center;
   display: flex;
