removing navigation header (#88)
* removing header

* updating

* updating profile

* updating

* updating

* updating

* updating

* updating layout

--- a/src/spa/app/layout/profile/profile.module.less
+++ b/src/spa/app/layout/profile/profile.module.less
@@ -1,21 +1,14 @@
 @import "~styles/_colors";
 @import "~styles/_sizes";
 
-.arrowDiv {
-  margin-left: 0.5rem;
-  > svg {
-    * {
-      fill: @lightGrey;
-    }
-  }
-}
-
 .div {
   align-items: center;
   cursor: pointer;
   display: flex;
   height: @headerHeight;
   margin: 0 1.5rem;
+  position: absolute;
+  right: 1rem;
 }
 
 .ul {
