--- a/src/index.less
+++ b/src/index.less
@@ -5,7 +5,7 @@ html, body {
 }
 
 #app {
-  background: #F3F5FA;
+  background: #F3F5FA; // aka `@appBackground` in `styles/_colors.less`
   display: flex;
   height: 100%;
 }
