making logo of nav absolutely positioned

--- a/src/spa/app/layout/navigation/navigationButtons/navigationButtons.module.less
+++ b/src/spa/app/layout/navigation/navigationButtons/navigationButtons.module.less
@@ -3,7 +3,7 @@
 .parentSection {
   align-items: center;
   display: flex;
-  height: calc(100% - @headerHeight);
+  height: 100%;
   justify-content: center;
 }
 
