--- a/src/spa/app/layout/navigation/navigationLogo/navigationLogo.module.less
+++ b/src/spa/app/layout/navigation/navigationLogo/navigationLogo.module.less
@@ -9,5 +9,7 @@
   display: flex;
   height: @headerHeight;
   justify-content: center;
-  position: relative;
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
 }
