updating styling of dashboard header

--- a/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
+++ b/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
@@ -11,7 +11,7 @@
 
 .formContainer {
   display: flex;
-  margin: 1rem 0 0 calc(@cardMargin + @dashboardPagePaddingLeft);
+  margin-left: calc(@cardMargin + @dashboardPagePaddingLeft);
 }
 
 .input {
