--- a/src/spa/app/layout/header/header.module.less
+++ b/src/spa/app/layout/header/header.module.less
@@ -1,7 +1,7 @@
 @import "~styles/_sizes";
 
 .header {
-  background: #E41245;
   height: @headerHeight;
   position: relative;
+  margin-top: @headerMarginTop;
 }
