--- a/src/spa/app/layout/header/headerProfile/headerProfile.module.less
+++ b/src/spa/app/layout/header/headerProfile/headerProfile.module.less
@@ -2,7 +2,7 @@
 @import "~styles/_sizes";
 
 .div {
-  align-items: center;
+  align-items: flex-start;
   cursor: pointer;
   display: flex;
   height: @headerHeight;
