--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -24,7 +24,8 @@
 
 // ----- NAVIGATION ----- //
 
-@headerHeight: 5rem;
+@headerHeight: 3rem;
+@headerMarginTop: 2.5rem;
 @navWidth: 5rem;
 @navWidthExpanded: 15rem;
 @navigationButtonHeight: 4rem;
