--- a/src/spa/app/layout/header/headerProfile/headerProfile.module.less
+++ b/src/spa/app/layout/header/headerProfile/headerProfile.module.less
@@ -2,13 +2,14 @@
 @import "~styles/_sizes";
 
 .div {
-  align-items: center;
+  align-items: flex-start;
   cursor: pointer;
   display: flex;
   height: @headerHeight;
   margin: 0 1.5rem;
   position: absolute;
   right: 1rem;
+  top: 0;
 }
 
 .ul {
