--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -45,6 +45,7 @@
 :export {
   caretSize: @caretSize;
   headerHeight: @headerHeight;
+  headerMarginTop: @headerMarginTop;
   navWidth: @navWidth;
 }
 /* stylelint-enable */
