adding textAlign prop to typography

--- a/src/spa/shared/typography/typography.module.less
+++ b/src/spa/shared/typography/typography.module.less
@@ -74,6 +74,20 @@
   font-size: @typographyNormal;
 }
 
+// ----- TEXT ALIGN ----- //
+
+.center {
+  text-align: center;
+}
+
+.left {
+  text-align: left;
+}
+
+.right {
+  text-align: right;
+}
+
 // ----- WEIGHTS ----- //
 
 .bold {
