--- a/src/spa/app/layout/navigation/navigationLogo/navigationLogo.module.less
+++ b/src/spa/app/layout/navigation/navigationLogo/navigationLogo.module.less
@@ -7,7 +7,7 @@
 .section {
   align-items: center;
   display: flex;
-  height: @headerHeight;
+  height: 5rem;
   justify-content: center;
   left: 50%;
   position: absolute;
