updating navigation logo styling / positioning

--- a/src/spa/app/layout/navigation/navigationLogo/navigationLogo.module.less
+++ b/src/spa/app/layout/navigation/navigationLogo/navigationLogo.module.less
@@ -5,11 +5,12 @@
 }
 
 .section {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
   height: @headerHeight;
   justify-content: center;
   left: 50%;
   position: absolute;
+  top: @headerMarginTop;
   transform: translateX(-50%);
 }
