adding about page header

--- a/src/spa/app/layout/header/pageHeaders/dashboardPageHeader/dashboardPageHeaderFilterForm/dashboardPageHeaderFilterForm.module.less
+++ b/src/spa/app/layout/header/pageHeaders/dashboardPageHeader/dashboardPageHeaderFilterForm/dashboardPageHeaderFilterForm.module.less
@@ -11,7 +11,7 @@
 
 .formContainer {
   display: flex;
-  margin-left: calc(@cardMargin + @dashboardPagePaddingLeft);
+  margin-left: @pageMarginLeft;
 }
 
 .input {
