--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -38,6 +38,7 @@
 // ----- PAGES ----- //
 
 @dashboardPagePaddingLeft: 1rem;
+@pageMarginLeft: calc(@cardMargin + @dashboardPagePaddingLeft);
 
 // ----- SIZE EXPORTS ----- //
 
