--- a/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
+++ b/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
@@ -1,7 +1,9 @@
 @import "~styles/_sizes";
 
 .img {
-  width: 40%;
+  border-radius: 2rem;
+  height: 45%;
+  width: 45%;
 }
 
 .section {
@@ -13,17 +15,18 @@
 }
 
 .paragraphDiv {
-  width: 50%;
+  width: 45%;
 }
 
 .paragraphSection {
   display: flex;
+  justify-content: space-between;
 }
 
 .parentSection {
   display: flex;
   flex-direction: column;
   height: 100%;
+  margin-top: 4rem;
   width: 100%;
 }
-
