--- a/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
+++ b/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
@@ -12,6 +12,9 @@
   margin-left: @pageMarginLeft;
   overflow: auto;
   padding-right: @pageMarginLeft;
+  :nth-of-type(2) {
+    margin-top: 5rem;
+  }
 }
 
 .paragraphDiv {
