--- a/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
+++ b/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
@@ -1,5 +1,13 @@
 @import "~styles/_sizes";
 
+@sectionMargin: 5rem;
+
+:global {
+  #p-2 {
+    margin-top: @sectionMargin;
+  }
+}
+
 .img {
   border-radius: 2rem;
   height: 45%;
@@ -12,9 +20,6 @@
   margin-left: @pageMarginLeft;
   overflow: auto;
   padding-right: @pageMarginLeft;
-  :nth-of-type(2) {
-    margin-top: 5rem;
-  }
 }
 
 .paragraphDiv {
@@ -32,4 +37,8 @@
   height: 100%;
   margin-top: 4rem;
   width: 100%;
+}
+
+.stackSection {
+  margin-top: @sectionMargin;
 }
